syncthing/manifests/synthing-deployment-morgspi.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
      - name: syncthing
        image: syncthing/syncthing:latest
        imagePullPolicy: Always
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
        - name: syncthing-data
          mountPath: /var/syncthing
        ports:
        - name: http
          containerPort: 8384
        - name: file-tcp
          containerPort: 22000
        - name: file-udp
          containerPort: 22000
          protocol: UDP
        readinessProbe:
          httpGet:
            path: /
            port: 8384
        livenessProbe:
          httpGet:
            path: /
            port: 8384
      volumes:
      - name: syncthing-data
        hostPath:
          path: "/k3s/syncthing"

---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
spec:
  selector:
    app: syncthing
  type: NodePort
  ports:
  - name: http
    port: 8384
    targetPort: 8384
    nodePort: 30000
    protocol: TCP
  - name: file-tcp
    port: 32000
    targetPort: 22000
    nodePort: 32000
    protocol: TCP
  - name: file-udp
    port: 31000
    targetPort: 22000
    nodePort: 31000
    protocol: UDP
