syncthing/manifests/syncthing-prod.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: syncthing

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: syncthing
  namespace: syncthing
  labels:
    app: syncthing
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: syncthing
  revisionHistoryLimit: 0
  template:
    metadata:
      labels:
        app: syncthing
    spec:
      containers:
      - name: syncthing
        image: syncthing/syncthing:2.1.5
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            cpu: "100m"
            memory: "128Mi"
          limits:
            cpu: "500m"
            memory: "256Mi"
        volumeMounts:
        - name: syncthing-data
          mountPath: /var/syncthing
        ports:
        - name: http
          containerPort: 8384
        - name: file-tcp
          containerPort: 22000
        readinessProbe:
          httpGet:
            path: /
            port: 8384
        livenessProbe:
          httpGet:
            path: /
            port: 8384
      volumes:
      - name: syncthing-data
        hostPath:
          path: "/mnt/k3s-prod-data/syncthing"

---
apiVersion: v1
kind: Service
metadata:
  name: syncthing-file
  namespace: syncthing
spec:
  selector:
    app: syncthing
  type: ClusterIP
  ports:
  - name: file-tcp
    port: 22000
    targetPort: 22000
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRouteTCP
metadata:
  name: syncthing-file
  namespace: syncthing
spec:
  entryPoints:
    - syncthing-tcp
  routes:
  - match: HostSNI(`*`)
    services:
    - name: syncthing-file
      port: 22000

---
apiVersion: v1
kind: Service
metadata:
  name: syncthing
  namespace: syncthing
spec:
  selector:
    app: syncthing
  type: ClusterIP
  ports:
  - name: http
    port: 8384
    targetPort: 8384
    protocol: TCP

---
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: syncthing-ingress
  namespace: syncthing
spec:
  entryPoints:
    - websecure
  routes:
    - match: Host(`syncthing-prod.goepp.net`) && PathPrefix(`/`)
      kind: Rule
      services:
        - name: syncthing
          port: 8384
